<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SuggestActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_suggest_back"
            style="?attr/borderlessButtonStyle"
            android:layout_width="33dp"
            android:layout_height="20dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/ic_chevron_left"
            app:iconTint="@color/brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:textSize="20sp"
            android:textColor="@color/brown"
            android:text="@string/suggest_title" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/semiprimary_white"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:scrollbars="none"
            android:fadeScrollbars="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fillViewport="true"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_suggest_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="Option 1"
                    android:background="@drawable/suggest_btn_option"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@null"
                    android:fontFamily="@font/medium"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/stroke_grey"
                    app:backgroundTint="@null"/>

                <Button
                    android:id="@+id/btn_suggest_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="Option 2"
                    android:fontFamily="@font/medium"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/stroke_grey"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/suggest_btn_option"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null"/>

                <Button
                    android:id="@+id/btn_suggest_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="Option 3"
                    android:fontFamily="@font/medium"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/stroke_grey"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/suggest_btn_option"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@drawable/frg_edittext_background">

            <EditText
                android:id="@+id/edit_suggest_chatbot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start | center_vertical"
                android:fontFamily="@font/medium"
                android:textColorHint="@color/stroke_grey"
                android:textSize="14sp"
                android:background="@null"
                android:layout_weight="1"
                android:hint="@string/ai_chat_hint"/>

            <Button
                android:id="@+id/btn_suggest_send"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/btn_send"
                android:backgroundTint="@null"
                android:layout_gravity="center_vertical"
                app:backgroundTint="@null"
                android:tint="@null"
                android:foreground="?attr/selectableItemBackgroundBorderless" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>